--- a/proc_creation_win_apt_dragonfly.yml
+++ b/proc_creation_win_apt_dragonfly.yml
@@ -1,4 +1,4 @@
-title:NT-CrackMapExecWin
+title: CrackMapExecWin
 id: 04d9079e-3905-4b70-ad37-6bdf11304965
 status: deprecated
 description: Detects CrackMapExecWin Activity as Described by NCSC
